k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: wanderlust
  namespace: wanderlust

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wanderlust

  template:
    metadata:
      labels:
        app: wanderlust

    spec:
      containers:
        - name: wanderlust

          image: abhishekthite09/wanderlust:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
