k8s/service.yml
apiVersion: v1

kind: Service

metadata:
  name: wanderlust-service
  namespace: wanderlust

spec:
  selector:
    app: wanderlust

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: LoadBalancer
