k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: wanderlust-ingress
  namespace: wanderlust

spec:
  ingressClassName: nginx

  rules:
    - host: wanderlust.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: wanderlust-service

                port:
                  number: 80
